# msa

./: .gitignore  404.html  Getting Started.html  LICENSE  Makefile  README.md  codemeta.json  index.html  mkdocs.yml  msa.py  objects.inv  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: makefile.yml  publish_pypi.yml  python-app.yml
API/: estimate_causal_influences.html  get_shapley_table.html  interface.html  make_combination_space.html  make_complement_space.html  make_permutation_space.html  make_shapley_values.html  network_interaction_2d.html  take_contributions.html
Plotting/: color_code.html  plot_shapley_ranks.html
Utils/: bootstrap_hypothesis_testing.html  distribution_of_processing.html  parallelized_take_contributions.html  sorter.html
core/: __init__.py  msa.py  utils.py
docs/: Getting Started.ipynb  README.md
docs/API/: estimate_causal_influences.md  get_shapley_table.md  interface.md  interface_2d.md  make_combination_space.md  make_complement_space.md  make_permutation_space.md  make_shapley_values.md  network_interaction_2d.md  take_contributions.md
docs/Plotting/: color_code.md  plot_shapley_ranks.md
examples/: MSA TimeSeries.html  brain modes.html  brain modes.ipynb  minimal.html  minimal.ipynb  mnist_torch.html  msa2d.html  on ground-truth models.html  on ground-truth models.ipynb
msa_src/: __init__.py  msa.py  utils.py
msapy/: __init__.py  checks.py  datastructures.py  msa.py  plottings.py  utils.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_bad_inputs.py  test_ground_truth.py  test_ground_truth_multiscores.py  test_ground_truth_nd.py  test_ground_truth_timeseries.py  test_version.py
(+12 files in other folders)
