[tool.poetry]
name = "msapy"
version = "1.7.1"
description = "Multi-perturbation Shapley value Analysis (MSA)"
homepage = "https://github.com/kuffmode/msa"
repository = "https://github.com/kuffmode/msa"
documentation = "https://kuffmode.github.io/msa/"
authors = ["Kayson Fakhar <kayson.fakhar@gmail.com>",  "Shrey Dixit <shrey.akshaj@gmail.com>"]
license = "OSI Approved :: MIT License"
readme = "docs/README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.1"
pytest = "^8.1.1"
numpy = "^1.26.4"
tqdm = "^4.66.2"
fastprogress = "^1.0.3"
tqdm-joblib = "^0.0.3"
ordered-set = "^4.1.0"
joblib = "^1.3.2"
typeguard = ">=2.13.0,<2.14.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
