[project]
name = "msapy"
version = "1.7.3"
description = "Multi-perturbation Shapley value Analysis (MSA)"
readme = "docs/README.md"
license = { text = "OSI Approved :: MIT License" }
requires-python = ">=3.11"

authors = [
  { name = "Kayson Fakhar", email = "kayson.fakhar@gmail.com" },
  { name = "Shrey Dixit", email = "shrey.akshaj@gmail.com" }
]


dependencies = [
  "pandas>=2.3.1",
  "pytest>=8.4.1",
  "numpy>=2.3.1",
  "tqdm>=4.67.1",
  "fastprogress>=1.0.3",
  "tqdm-joblib>=0.0.4",
  "ordered-set>=4.1.0",
  "joblib>=1.5.1",
  "typeguard>=2.13.0,<2.14.0",
  "toml>=0.10.2"
]

[project.urls]
Homepage = "https://github.com/kuffmode/msa"
Repository = "https://github.com/kuffmode/msa"
Documentation = "https://kuffmode.github.io/msa/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
